# second-brain

./: obsidian_contabo_setup_documentation.docx  obsidian_supabase_mcp_prd.md  provisioned_api_key.md
Idea_Log/: knowledge-gateway-idea-2026-04-10-cross-project-entity-mind-map.md
Targets/: knowledge-gateway-target-2026-04-09-2hr.md  knowledge-gateway-task-2026-04-10-2.5hr-focus.md
Tasks/: knowledge-gateway-task-2026-04-11-agent-integration-and-skill-standardization.md
knowledge-gateway/: .dockerignore  .env.example  .env.local  .gitignore  Dockerfile  README.md  pyproject.toml
knowledge-gateway/docs/: agent-setup.md  logging-standard.md
knowledge-gateway/docs/architecture/: skill-suite-router-protocol.md
knowledge-gateway/docs/deploy/: ghcr-rebuild-push-pull.md
knowledge-gateway/docs/setup/: codex-instances-setup.md
knowledge-gateway/scripts/: provision_client.py
knowledge-gateway/skills/knowledge-gateway-logging/: SKILL.md
knowledge-gateway/skills/knowledge-gateway-router/: SKILL.md
knowledge-gateway/skills/knowledge-gateway-schema-intake/: SKILL.md
knowledge-gateway/src/knowledge_gateway/: app.py  config.py  context.py  main.py  mcp_server.py  skills_catalog.py
knowledge-gateway/src/knowledge_gateway/models/: schema.py
knowledge-gateway/src/knowledge_gateway/services/: audit.py  auth.py  db_store.py  errors.py  obsidian_store.py  reporting.py  schema_manager.py
knowledge-gateway/tests/: conftest.py  test_auth.py  test_dynamic_tables.py  test_logging_and_timeline.py  test_logging_skill_tools.py  test_non_destructive.py  test_tool_metadata.py
(+3 files in other folders)
