[project]
name = "knowledge-gateway"
version = "0.1.0"
description = "Unified VPS MCP gateway for Obsidian + Supabase with non-destructive dynamic schema"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "mcp>=1.10.0",
  "sqlalchemy>=2.0.36",
  "psycopg2-binary>=2.9.10",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "python-dateutil>=2.9.0",
  "jinja2>=3.1.4"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.2"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
